--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <div id="content"></div>
+
+    <div id="content">
+        <h1>Home Page</h1>
+    </div>
     <!-- <nav aria-label="Page navigation example">
         <ul class="pagination">
           <li class="page-item"><a class="page-link" href="#" onclick="prevPage()">Previous</a></li>
@@ -28,7 +31,10 @@
     </div>
 
 </body>
-<script src="static/javascripts/jquery.js"></script>
+<!-- <script src="static/javascripts/jquery.js"></script>
 <script src="static/javascripts/pagination.js"></script>
-<script src="static/javascripts/script.js"></script>
+<script src="static/javascripts/script.js"></script> -->
+
+    
+
 </html>
