ajax & auth permitsion

--- a/home.html
+++ b/home.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Document</title>
 </head>
 <body>
-    <label for="">Username</label> 
-    <input type="text" id="username">
-    <br>
-    <label for="">Password</label>
-    <input type="password" id="password">
-    <br>
-
-    <button onclick="login()">Login</button>
+    <h1>Home Page</h1>
+    <button onclick="" id="btn"> edit </button>
 </body>
 <script src="/static/javascripts/jquery.js"></script>
 <script >
@@ -40,26 +34,19 @@
         return "";
     }    
 
-    function login(){
+    $('#btn').click( () => {
+        const token = getCookie('token')
         $.ajax({
-            url:'/login',
-            type:'POST',
-            data:{
-            username: $('#username').val(),
-            password: $('#password').val()
-            }
+            url:'/edit', 
+            headers:{
+                token: token
+            },
+            type:'post'
         })
         .then( (data) => {
             console.log(data)
-            setCookie('token',data.token,1)
-            $(window).attr('location','http://localhost:3000/home')
         })
-        .catch( (error) =>{
-            console.log(error)
-
-        })
-    }
-       
+    })
         
 </script>
 </html>
